<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebookAppID">1410606722535641</string>
    <string name="app_name">StoreIn</string>
    <string name="title_section1">Discover</string>
    <string name="title_section2">Home</string>
    <string name="title_section3">Social</string>
    <string name="title_section4">Timeline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="sign_up_label">Not yet registered ?</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_error_message">Make sure you enter a username and password!</string>
    <string name="login_error_title">Login Error</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Your Name</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="signup_error_message">Make sure you enter a username, email and password</string>
    <string name="signup_error_title">Sign Up Error</string>
    <string name="login_button_label">Login</string>
    <string name="menu_logout_label">Logout</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="title_activity_home">User Statistic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_out_range">Out of Range</string>
    <string name="error_title">Oops Sorry !</string>
    <string name="image_preview_text">Preview Image</string>
    <string name="check_in">Check In</string>
    <string name="phone_label">Phone Number</string>
    <string name="title_activity_location_detail">Location Detail</string>
    <string name="location_name_label">Preview Location Name</string>
    <string name="location_address_label">Preview Location Address Which has Postal Code and Etc :D</string>
    <string name="location_phone_label">0123456789</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_location_catalog">Location Catalog</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="check_review">Check Review</string>
    <string name="love_it">Love It</string>
    <string name="item_detail_title">Item Name</string>
    <string name="item_detail_description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse"</string>
    <string name="item_detail_write_review">Review It</string>
    <string name="title_activity_write_review_item">Write Review</string>
    <string name="title_activity_item_review">Item Reviews</string>
    <string name="title_activity_promotion_list">Promotion List</string>
    <string name="title_activity_promotion_detail">Promotion Detail</string>
    <string name="image_description_testing">Testing image Description</string>
    <string name="promotion_detail_title">Promotion Title</string>
    <string name="promotion_detail_requirement_title">Requirement</string>
    <string name="promotion_detail_requirement">Lorem Ipsum dolor si amet, consectetur adpisicing elit, sed do eius tempar incidunt</string>
    <string name="promotion_detail_description_title">Promotion Description</string>
    <string name="promotion_detail_decription">Lorem Ipsum dolor si amet, consectetur adpisicing elit, sed do eius tempar incidunt</string>
    <string name="promotion_start_end_date_title">Duration</string>
    <string name="promotion_start_end_date">Start Date - End Date</string>
    <string name="promotion_location_title">Location(s)</string>
    <string name="home_username">user name</string>
    <string name="home_check_in_title">Check In</string>
    <string name="home_following_title">Following</string>
    <string name="home_follower_title">Follower</string>
    <string name="home_example_number">1</string>
    <string name="home_edit_profile">edit your profile</string>
    <string name="title_activity_claim_promotion">Claim Promotion</string>
    <string name="top_items">Top Items</string>
    <string name="top_promotions">Top Promotions</string>
    <string name="location_title_reward">Reward Points</string>
    <string name="promotion_button_claim_it">Claim It</string>
    <string name="promotion_flash_deal_quantity">0</string>
    <string name="check_in_title_list_place">Nearby Places</string>
    <string name="title_activity_location_information">Location Information</string>
    <string name="location_information_title_section1">Place Info</string>
    <string name="location_information_title_section2">Promotions</string>
    <string name="location_information_title_section3">Top Items</string>
    <string name="title_activity_location_items">Store Top Items</string>
    <string name="title_activity_location_promotions">Promotions</string>
    <string name="title_activity_item_information">Item Detail</string>
    <string name="item_information_title_section1">Item Info</string>
    <string name="item_information_title_section2">User Review</string>
    <string name="title_activity_friend_information">Friend Manager</string>
    <string name="friend_information_imagebutton_desc">Search Friend Id</string>
    <string name="friend_information_hint">Input Friend Id</string>
    <string name="friend_information_friend_list_title">Following</string>
    <string name="title_activity_friend_detail">Friend Detail</string>
    <string name="home_recent_activity_title">Recent Activity</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="friend_relation_status">Status</string>
    <string name="add_friend_button_follow">Follow</string>
    <string name="add_friend_username">Friend Username</string>
    <string name="title_activity_beacon">Beacon Search</string>
    <string name="title_activity_beacon_manager">Beacon Finder</string>
    <string name="home_claimed_promotion_title">Promotion Claimed</string>
    <string name="home_recomendation_title">Recomendation</string>
    <string name="home_recomendation_place">Recommended place</string>
    <string name="home_recomended_item">recommended item</string>
    <string name="home_button_recommend_me">"Recommend Me "</string>
    <string name="location_detail_title_total_check_in">Total Check In</string>
    <string name="location_detail_total_check_in">1</string>
    <string name="location_detail_title_opening_hour">Opening Hour</string>
    <string name="location_detail_opening_hour">[\"Monday: 08:00-10:00\",\n\"Tuesday: 08:00-10:00\",\n\"Wednesday: 08:00-10:00\",\n\"Thursday: 08:00-10:00\",\n\"Friday: 08:00-10:00\"]</string>
    <string name="list_item_name">Item Name</string>
    <string name="list_item_description">item about what this description about</string>
    <string name="list_item_total_loved">100</string>
    <string name="list_promotion_title_flash_deal">Flash Deal</string>
    <string name="title_activity_updates_fragement">Updates</string>
    <string name="list_activity_friend_name">Username</string>
    <string name="list_activity_friend_activity">I just claimed / check in to this object</string>
    <string name="list_activity_date">date</string>
    <string name="activity_login_log_in_with_facebook">Login with Facebook</string>
    <string name="title_activity_check_in_fragment2">Nearby Place</string>
    <string name="title_activity_browse_fragment2">Browse Promotions</string>
    <string name="title_activity_discover_fragment">Discover</string>
    <string name="home_title_reward_point">Reward Point :</string>
    <string name="home_reward_points">100</string>
    <string name="login_forget_password">forgot your password ?</string>
    <string name="forget_password_enter_email_address">Please enter your email address</string>
    <string name="forget_password_reset_password">Reset Password</string>
    <string name="home_reward_promotion_title">Reward Points</string>
    <string name="promotion_detail_follow">Follow</string>
    <string name="title_activity_stash">Stash</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="edit_profile_get_image">Get Profile Image</string>
    <string name="edit_profile_submit">Submit change</string>
    <string name="password_re_hint">re enter password</string>
    <string name="list_timeline_username">User Name</string>
    <string name="list_promotion_description">recent activity has been done in 1 hour</string>

</resources>