<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textListPromotionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toLeftOf="@+id/textListPromotionTitleFlash"
        android:paddingLeft="10dip"
        android:paddingTop="5dip"
        android:singleLine="true"
        android:text="@string/list_item_name"
        android:textSize="16sp" />

    <!-- Description -->

    <TextView
        android:id="@+id/textListPromotionDuration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thumbnail"
        android:layout_below="@id/textListPromotionName"
        android:layout_marginTop="1dip"
        android:layout_toLeftOf="@+id/thumbnail"
        android:paddingLeft="10dip"
        android:singleLine="true"
        android:text="@string/list_item_description"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="120dip"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:orientation="horizontal"
        android:padding="0dip" >

        <TextView
            android:id="@+id/textItemDetailTotalReward"
            android:layout_width="70dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/list_item_total_loved"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageRewardIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="heart_beat"
            android:src="@drawable/reward_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/textListPromotionTitleFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textListPromotionDuration"
        android:layout_centerHorizontal="true"
        android:paddingLeft="8dp"
        android:text="@string/list_promotion_title_flash_deal"
        android:textColor="@color/redTitleFlash"
        android:textSize="12sp" />

</RelativeLayout>