<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.storein.FriendDetail$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" >

            <ImageView
                android:id="@+id/friendProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description_testing"
                android:padding="10dp"
                android:src="@drawable/himeji" />

            <TextView
                android:id="@+id/friendUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/friendProfilePicture"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/home_username"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/friendNumberCheckInTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/friendProfilePicture"
                android:text="@string/home_check_in_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friendNumberFollowingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/friendNumberCheckInTitle"
                android:layout_alignBottom="@+id/friendNumberCheckInTitle"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/friendNumberCheckInTitle"
                android:text="@string/home_following_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friendNumberFollowerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/friendNumberFollowingTitle"
                android:layout_alignBottom="@+id/friendNumberFollowingTitle"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/home_follower_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friendNumberCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/friendNumberCheckInTitle"
                android:layout_toRightOf="@+id/friendProfilePicture"
                android:text="@string/home_example_number"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/friendNumberFollower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/friendNumberCheckIn"
                android:layout_alignLeft="@+id/friendNumberFollowingTitle"
                android:text="@string/home_example_number"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/friendNumberFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/friendNumberFollowerTitle"
                android:layout_alignLeft="@+id/friendNumberFollowerTitle"
                android:text="@string/home_example_number"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" >

            <TextView
                android:id="@+id/textRecentActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:text="@string/home_recent_activity_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/recentActivity"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" >
            </ListView>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>